--- a/pwap/static/js/package.json
+++ b/pwap/static/js/package.json
@@ -15,6 +15,10 @@
   "dependencies": {
     "bootstrap": "^3.3.0",
     "brace": "^0.4.0",
+    "jquery": "1.*",
+    "lodash": "^2.4.1"
+  },
+  "devDependencies": {
     "browserify": "^6.2.0",
     "casperjs": "^1.1.0-beta3",
     "csslint": "^0.10.0",
@@ -28,8 +32,6 @@
     "gulp-rename": "^1.2.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
-    "jquery": "1.*",
-    "lodash": "^2.4.1",
     "phantomcss": "^0.9.0",
     "terminus": "^1.0.10",
     "vinyl-source-stream": "^1.0.0",
