--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 Flask==0.10.1
-Flask-PyMongo==0.3.0
+Flask-Login==0.2.11
+Flask-SQLAlchemy==2.0
+Flask-Script==2.0.5
+Flask-WTF==0.10.2
 Jinja2==2.7.3
 MarkupSafe==0.23
+SQLAlchemy==0.9.8
+WTForms==2.0.1
 Werkzeug==0.9.6
+gunicorn==19.1.1
 itsdangerous==0.24
-pymongo==2.7.2
+psycopg2==2.5.4
 wsgiref==0.1.2
-Flask-Script
-gunicorn
-Flask-WTF
-Flask-Login
-Flask-SQLAlchemy
-psycopg2
