--- a/pwap/static/js/package.json
+++ b/pwap/static/js/package.json
@@ -27,7 +27,7 @@
     "exorcist": "^0.1.6",
     "gulp": "^3.8.9",
     "gulp-cache": "^0.2.4",
-    "gulp-jscs": "^1.2.1",
+    "gulp-jscs": "1.2.0",
     "gulp-jshint": "^1.8.5",
     "gulp-livereload": "^2.1.1",
     "gulp-rename": "^1.2.0",
