saving game before I try moving to a different approach

--- a/pwap/static/js/.jshintrc
+++ b/pwap/static/js/.jshintrc
@@ -4,6 +4,9 @@
 	"camelcase"	: true,
 	"curly"		: true,
 	"forin"		: true,
+	"globals"   : {
+		"$": false
+	},
 	"immed"		: true,
 	"indent"	: 4,
 	"latedef"	: true,
