--- a/pwap/static/js/package.json
+++ b/pwap/static/js/package.json
@@ -13,11 +13,16 @@
     "url": "https://github.com/NUDelta/ProgrammingWithAPurpose.git"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bootstrap": "^3.3.0",
     "brace": "^0.4.0",
     "jquery": "1.*",
     "less": "^1.7.5",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "phantom": "^0.7.0",
+    "phantomjs": "^1.9.12",
+    "rasterizehtml": "^0.9.2",
+    "tmp": "0.0.24"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
