--- a/pwap/static/js/package.json
+++ b/pwap/static/js/package.json
@@ -19,15 +19,12 @@
     "jquery": "1.*",
     "less": "^1.7.5",
     "lodash": "^2.4.1",
-    "phantom": "^0.7.0",
     "phantomjs": "^1.9.12",
-    "rasterizehtml": "^0.9.2",
+    "resemblejs": "^1.2.0",
     "tmp": "0.0.24"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
-    "casperjs": "^1.1.0-beta3",
-    "csslint": "^0.10.0",
     "del": "^0.1.3",
     "exorcist": "^0.1.6",
     "gulp": "^3.8.9",
@@ -38,7 +35,6 @@
     "gulp-rename": "^1.2.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.1",
-    "phantomcss": "^0.9.0",
     "terminus": "^1.0.10",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.0"
