--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "less": "^1.7.5",
     "lodash": "^2.4.1",
     "phantom": "^0.7.0",
+    "rasterizehtml": "^0.9.2",
     "resemblejs": "^1.2.0",
-    "tmp": "0.0.24",
-    "html2canvas": "niklasvh/html2canvas"
+    "tmp": "0.0.24"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
