made phantom rendering MUCH faster, moved lodash dependency to index.js, other changes

--- a/pwap/javascript/.jshintrc
+++ b/pwap/javascript/.jshintrc
@@ -5,7 +5,8 @@
 	"curly"		: true,
 	"forin"		: true,
 	"globals"   : {
-		"$": false
+		"$": false,
+		"_": false
 	},
 	"immed"		: true,
 	"indent"	: 4,
