--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "browserify": "^6.2.0",
     "del": "^0.1.3",
     "exorcist": "^0.1.6",
+    "express": "^4.10.2",
     "gulp": "^3.8.9",
     "gulp-cache": "^0.2.4",
     "gulp-jscs": "1.2.0",
