--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async": "^0.9.0",
     "bootstrap": "^3.3.0",
     "brace": "^0.4.0",
+    "intro.js": "^0.9.0",
     "jquery": "1.*",
     "less": "^1.7.5",
     "lodash": "^2.4.1",
