--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "ProgrammingWithAPurpose =======================",
   "main": "index.js",
   "scripts": {
-    "start": "python manage.py runserver",
+    "start": "gunicorn -w 4 -b 127.0.0.1:5000 --log-file=log.txt --reload manage:app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
