--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "jquery": "1.*",
     "less": "^1.7.5",
     "lodash": "^2.4.1",
+    "mongodb": "^1.4.30",
     "raphael": "^2.1.0",
     "rasterizehtml": "^0.9.2",
     "resemblejs": "^1.2.0",
     "socket.io": "^1.3.3",
+    "socket.io-browserify": "^0.9.6",
     "tmp": "0.0.24"
   },
   "devDependencies": {
